# maya_arches

./: .gitignore  LICENSE  README.md  analysis.py  blocks.py  diagrams.py  minmax.py  optimization.py  plotting.py  setup.cfg  slicing.py  vaults.py
scripts/: grid.py  grids.py  minmax.py  minmax.yml  minmax_tna.py  minmax_tna.yml  sweep.ipynb  thrust_space.py  tna.py  tna.yml
scripts/_archive/: grids.py
src/maya_arches/: __init__.py  datastructures.py  optimization.py  plotting.py
src/maya_arches/arches/: __init__.py  arch.py  circular.py  elliptical.py  maya.py
src/maya_arches/blocks/: blocks.py  helpers.py  slicing.py
src/maya_arches/vaults/: circular.py  elliptical.py  maya.py  vaults.py
src/mayan_vaults/: datastructures.py  optimization.py  plotting.py  vaults.py
src/mayan_vaults.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mayan_vaults/blocks/: __init__.py  blocks.py  slicing.py
src/mayan_vaults/vaults/: __init__.py  circular.py  elliptical.py  maya.py  vaults.py
