[metadata]
name = mayan_vaults
version = 0.1.0
author = Rafael Pastrana
author_email = arpastrana@princeton.edu
description = A package for analyzing Mayan vaults using thrust line analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arpastrana/mayan_vaults
project_urls =
    Bug Tracker = https://github.com/arpastrana/mayan_vaults/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    compas==1.17.10
    equinox
    scipy
    jax-cem
    jax
    pyyaml

[options.packages.find]
where = src